# Mendel-s-Genetics

./: Mendel.hs  README.md  main.hs  mendel.cabal
